fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -5,7 +5,7 @@ body{
 padding: 0;
 margin: 0;
 bottom: 0px;
-max-height: 100%;
+height: 100%;
 }
 
 h1 {
